--- a/HyggePlay.csproj
+++ b/HyggePlay.csproj
@@ -12,12 +12,15 @@
     <Nullable>enable</Nullable>
     <AssemblyName>HyggePlay</AssemblyName>
     <RootNamespace>HyggePlay</RootNamespace>
-    <Platform>x64</Platform>
+    <Platforms>x64</Platforms>
+    <Platform Condition="'$(Platform)' == ''">x64</Platform>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.250907003" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.4654" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.8" />
+
   </ItemGroup>
 
   <ItemGroup>
