--- a/HyggePlay.csproj
+++ b/HyggePlay.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.250907003" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.8" />
+    <PackageReference Include="mpv.NET" Version="1.1.0" />
 
   </ItemGroup>
 
