--- a/HyggePlay.csproj
+++ b/HyggePlay.csproj
@@ -27,4 +27,11 @@
   <ItemGroup>
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="NativeLibraries\mpv-1.dll">
+      <Link>mpv-1.dll</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </None>
+  </ItemGroup>
 </Project>
